--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
         <java.version>17</java.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.3.4</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
