--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
         <java.version>17</java.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -24,28 +31,22 @@
 
         <!--
         <dependency>
-            <groupId>com.github.liuweiran900217</groupId>
-            <artifactId>CloudCrypto</artifactId>
-            <version>master-SNAPSHOT</version>
+            <groupId>com.github.GoncaloP0710C</groupId>
+            <artifactId>CloudCryptoc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/CloudCrypto-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
-        -->
+        my comment-->
 
         <dependency>
-            <groupId>com.github.liuweiran900217</groupId>
-            <artifactId>CloudCrypto</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/CloudCrypto.jar</systemPath>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.79</version>
         </dependency>
 
-    </dependencies>
 
-    <repositories>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
+    </dependencies>
 
     <build>
         <plugins>
