--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,26 @@
                 <version>1.79</version>
             </dependency>
 
-            
-
             <dependency>
                 <groupId>com.github.GoncaloP0710</groupId>
                 <artifactId>CloudCrypto</artifactId>
                 <version>master-1a324f82d1-1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.emilianobonassi.jpbc</groupId>
+                <artifactId>jpbc-api</artifactId>
+                <version>2.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.emilianobonassi.jpbc</groupId>
+                <artifactId>jpbc-crypto</artifactId>
+                <version>2.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.emilianobonassi.jpbc</groupId>
+                <artifactId>jpbc-plaf</artifactId>
+                <version>2.0.0</version>
             </dependency>
 
     </dependencies>
