--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
                 <version>${logback-classic.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>me.tongfei</groupId>
+                <artifactId>progressbar</artifactId>
+                <version>0.10.0</version>
+            </dependency>
+
     </dependencies>
 
     <build>
